# nef2fits

./: README.md  pyproject.toml
src/nef2fits/: __init__.py  nef2fits.py
