[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nef2fits"
version = "1.0"
authors = [
    {name="Santiago Henao", email="s.henao.castellanos@gmail.com"},
]
description = "Conversion from NEF raw files into FITS"
requires-python = ">=3.8"
dependencies = [
    "astropy>=6.0.0",
    "rawpy",
    "piexif"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

[project.scripts]
nef2fits = "nef2fits:main"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"