[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nef2fits"
version = "1.0"
authors = [
    {name="Santiago Henao", email="s.henao.castellanos@gmail.com"},
]
description = "Conversion from NEF raw files into FITS"
requires-python = ">=3.8"
dependencies = [
    "astropy>=6.0.0",
    "rawpy",
    "piexif"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

[project.scripts]
nef2fits = "nef2fits:main"

[project.urls]
Homepage = "https://github.com/s-henao-castellanos/nef2fits"
Issues = "https://github.com/s-henao-castellanos/nef2fits/issues"